--- a/src/app/components/favourite/favourite.component.html
+++ b/src/app/components/favourite/favourite.component.html
@@ -1,3 +1,3 @@
 <div *ngFor=" let post of favArray">
-    <app-post-card [postData]="post"></app-post-card>
+    <app-post-card [postArray]="post"></app-post-card>
 </div>
