--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,6 @@
 <header>
     <h1>REDDITATA</h1>
+    <h3>Scegli che tipo di post visualizzare</h3>
+    <a routerLink="/fav">Visualizza i post preferiti</a>
+    <a routerLink="/main"> Home</a>
 </header>
