--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let post of postArray">
-    <app-post-card [post]="post" *ngFor="let post of postArray" [postArray]="post" (removed)="removePost($event)" (faved)="addFav($event)" ></app-post-card>
+    <app-post-card [post]="post" *ngFor="let post of postArray" [postArray]="post" (removed)="removePost($event)" (faved)="addToFav($event)" ></app-post-card>
   </div>
