--- a/src/app/components/post-card/post-card.component.html
+++ b/src/app/components/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="postData" class="card">
+<div *ngIf="postArray" class="card">
     <span >{{ post.title }} </span>
     <span >Autore del post: u/{{ post.author }}</span>
     <span >ID del post: {{ post.id }}</span>
